# JniTest

./: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  pom.xml
csrc/: Hello.c  Makefile.am  Makefile.in
jni/: HelloJni.c  Makefile.am  Makefile.in  com_ttProject_test_jni_HelloJni.h
src/main/java/com/ttProject/test/jni/: HelloJni.java  Main.java
