#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([Hello], [1.0], [poepoemix@hotmail.com])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([csrc/Hello.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 csrc/Makefile])
AC_OUTPUT
